Upgrade to JDK21 and use reactive client in tests